--- a/app/globals.css
+++ b/app/globals.css
@@ -19,3 +19,9 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+h1 {
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+  padding: 2.5rem;
+}
