Update website-template to v1.2.0

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,4 +1,4 @@
-/* website-shared v1.1 */
+/* website-template v1.2 */
 
 @tailwind base;
 @tailwind components;
@@ -17,14 +17,14 @@
 }
 
 body {
-  color: white;
+  color: #f5f5f5; /* neutral-100 */
   background: theme('colors.darkest-blue');
   font-family: Arial, Helvetica, sans-serif;
 }
 
 input {
-  color: white;
-  background: theme('colors.dark-blue');
+  color: #f5f5f5;
+  background: theme('colors.light-blue');
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -57,10 +57,12 @@ button {
 }
 
 a:hover {
-  color: grey
+  color: #a3a3a3 /* neutral-400 */
 }
 
-/* THIS WEBSITE ONLY */
+a:active { 
+  color: #525252; /* neutral-600 */
+}
 
 h1 {
   font-size: 2.25rem;
@@ -70,6 +72,15 @@ h1 {
 }
 
 p a {
-  color: coral;
+  color: #fbbf24; /* amber-400 */
   text-decoration: underline;
 }
+
+p a:hover {
+  color: #f59e0b; /* amber-500 */
+}
+
+p a:active { 
+  color: #d97706; /* amber-600 */
+}
+
